Try to fix theme header spacing

--- a/themes/hermit-v2/assets/scss/_custom.scss
+++ b/themes/hermit-v2/assets/scss/_custom.scss
@@ -1163,7 +1163,8 @@ input::placeholder {
 }
 
 .search-modal-toggle {
-  margin-right: -25px !important;
+  margin-right: -15px !important;
+  margin-left: 15px !important;
   z-index: 9999999;
   position: relative;
 }
